--- a/src/templates/3_UZ_ChildDI_Staff_Registry_uz.html
+++ b/src/templates/3_UZ_ChildDI_Staff_Registry_uz.html
@@ -144,7 +144,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div>Muassasa tarkibidagi bo&#39;lim nomi. 80. Qo&#39;llanilmaydi</div>
+            <div>J2. Muassasa tarkibidagi bo&#39;lim nomi</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center gap-4">
                     <input type="text" id="j2" name="j2" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
