--- a/src/templates/2_UZ_ChildDI_Children_in_boarding_schools_uz.html
+++ b/src/templates/2_UZ_ChildDI_Children_in_boarding_schools_uz.html
@@ -419,8 +419,7 @@
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>SA5c. Muassasa turi</div>
             <div>
-                <select id="sa5c" name="sa5c"
-                        class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
+                <select id="sa5c" name="sa5c" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
                     <option selected value="-9" class="t_choose">------</option>
                     <option value="1">1. Bolalar uyi</option>
                     <option value="2">2. Mehribonlik uyi</option>
@@ -2811,11 +2810,10 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>7. Boshqa: Bolada yuqorida sanab o&#39;tilmagan boshqa sohalarda muammolar kuzatildi. Yozib ko&#39;rsatilsin: …</div>
+            <div class="flex flex-col gap-4">
+                7. Boshqa: Bolada yuqorida sanab o&#39;tilmagan boshqa sohalarda muammolar kuzatildi. Yozib ko&#39;rsatilsin: …                <input type="text" id="predif7_other" name="predif7_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+            </div>
             <div class="flex flex-col gap-2">
-                <div class="flex items-center">
-                    <input type="text" id="predif7_other" name="predif7_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                </div>
                 <div class="flex items-center">
                     <input id="predif7-1" type="radio" value="1" name="predif7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="predif7-1" class="ms-2 text-sm text-gray-900">1: Yo&#39;q yoki minimal. Muammo/qiyinchilik bolaning kundalik hayoti va faoliyatiga ta&#39;sir qilmaydi yoki faqat kichik tuzatishlar yohud moslashuvlarni talab qiladi.</label>
