--- a/src/templates/2_UZ_ChildDI_Children_in_boarding_schools_en.html
+++ b/src/templates/2_UZ_ChildDI_Children_in_boarding_schools_en.html
@@ -473,10 +473,14 @@
                 </div>
                 <div class="flex items-center">
                     <input id="sa4_9" type="checkbox" value="1" name="sa4_9" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="sa4_9" class="ms-2 text-sm text-gray-900">9. Additional causes (please specify): …</label>
+                    <label for="sa4_9" class="ms-2 text-sm text-gray-900">9. The child&#39;s need for specialized education provided by the school</label>
                 </div>
                 <div class="flex items-center">
-                    <input type="text" id="sa4_9_other" name="sa4_9_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <input id="sa4_10" type="checkbox" value="1" name="sa4_10" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="sa4_10" class="ms-2 text-sm text-gray-900">10. Additional causes (please specify): …</label>
+                </div>
+                <div class="flex items-center">
+                    <input type="text" id="sa4_10_other" name="sa4_10_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
                 </div>
             </div>
         </div>
